Dev test/integration test (#80)
* Testing/phase1 (#62)

* Phase 1 testing should work as expected.

* Phase 1 as expected plus changes in Product classes to set availability.

* Added Controller tests for the Phase1 test classes and product.

* Update made in Jav-ci.yml to run the tests

* removed the line for not skipping integration tests

* Removed the entire line

* why are these tests skipping

* bug fixing fro optional test

* Add query in order and orderitems, support bidirection search (#61)

* feat(order, orderitems): update schema and order mapto item bidirectional search

--IMPORTANT
**Dev Only**: run ./mvnw -Dflyway.repair=true flyway:repair to reload the schema. THIS WILL DROP TABLE

* chore: update .gitignore to ignore IDE files and OS-specific artifacts

- Ignore all files in the .idea directory
- Add pattern to ignore .DS_Store files in all directories

---------

Co-authored-by: Tiehang Zhang <zth.chem@gmail.com>

---------

Co-authored-by: rjeswan2 <rjeswan2@ncsu.edu>
Co-authored-by: Tiehang Zhang <tzhang33@ncsu.edu>
Co-authored-by: Tiehang Zhang <zth.chem@gmail.com>

* Testing/user product merchant services (#63)

* Has the intial test functions for UserServiceImpl.java

* Added Validation Service to UserServiceImpl

* Fixed the bugs regarding null phone, birth day, and name as well as duplicate email in reigsterUserRequest

* Got rid of VerifyAge in UserService since it can use validationService
Updated deleteUser too boolean
Added a new method to UserController for deleteUsers

* Updated pom.xml with a time/date dependency
Finished Testing Merchant
Updated MerchantController to use the mapper
Updated the MerchantServcie to use the repository

* Updated UserRepository to ignore EmailCase

* Updated UserServiceTests on all methods for high coverage
Fixed two bugs with UserController

* Updated merchant to have more validation checks
Updated the tests to accomodate those checks

* Updated MerchantController to throw exceptions
Updated the MerchantC